# disaster-relief-openenv

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  environment.py  main.py  models.py  reward.py  simulation.py
app/tasks/: __init__.py  base_task.py  compound_hard.py  earthquake_medium.py  flood_easy.py
server/: app.py
tests/: test_environment.py  test_rewards.py  test_tasks.py
